[package]
name = "spacepackets"
version = "0.11.2"
edition = "2021"
rust-version = "1.68"
authors = ["Robin Mueller <muellerr@irs.uni-stuttgart.de>"]
description = "Generic implementations for various CCSDS and ECSS packet standards"
homepage = "https://egit.irs.uni-stuttgart.de/rust/spacepackets"
repository = "https://egit.irs.uni-stuttgart.de/rust/spacepackets"
license = "Apache-2.0"
keywords = ["no-std", "space", "packets", "ccsds", "ecss"]
categories = ["aerospace", "aerospace::space-protocols", "no-std", "hardware-support", "embedded"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc = "3"
delegate = ">=0.8, <0.11"

[dependencies.zerocopy]
version = "0.7"
features = ["derive"]

[dependencies.thiserror]
version = "1"
optional = true

[dependencies.num_enum]
version = ">0.5, <=0.7"
default-features = false

[dependencies.serde]
version = "1"
optional = true
default-features = false
features = ["derive"]

[dependencies.time]
version = "0.3"
default-features = false
optional = true

[dependencies.chrono]
version = "0.4"
default-features = false
optional = true

[dependencies.num-traits]
version = "0.2"
default-features = false

[dependencies.defmt]
version = "0.3"
optional = true

[dev-dependencies]
postcard = "1"
chrono = "0.4"

[features]
default = ["std"]
std = ["chrono/std", "chrono/clock", "alloc", "thiserror"]
serde = ["dep:serde", "chrono/serde"]
alloc = ["postcard/alloc", "chrono/alloc"]
chrono = ["dep:chrono"]
timelib = ["dep:time"]
defmt = ["dep:defmt"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docs_rs", "--generate-link-to-definition"]
