[package]
name = "spacepackets"
version = "0.13.1"
edition = "2021"
rust-version = "1.81.0"
authors = ["Robin Mueller <muellerr@irs.uni-stuttgart.de>"]
description = "Generic implementations for various CCSDS and ECSS packet standards"
homepage = "https://egit.irs.uni-stuttgart.de/rust/spacepackets"
repository = "https://egit.irs.uni-stuttgart.de/rust/spacepackets"
license = "Apache-2.0"
keywords = ["no-std", "space", "packets", "ccsds", "ecss"]
categories = ["aerospace", "aerospace::space-protocols", "no-std", "hardware-support", "embedded"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc = "3"
delegate = ">=0.8, <=0.13"
paste = "1"

[dependencies.zerocopy]
version = "0.8"
features = ["derive"]

[dependencies.thiserror]
version = "2"
default-features = false

[dependencies.num_enum]
version = ">0.5, <=0.7"
default-features = false

[dependencies.serde]
version = "1"
optional = true
default-features = false
features = ["derive"]

[dependencies.time]
version = "0.3"
default-features = false
optional = true

[dependencies.chrono]
version = "0.4"
default-features = false
optional = true

[dependencies.num-traits]
version = "0.2"
default-features = false

[dependencies.defmt]
version = "0.3"
optional = true

[features]
default = ["std"]
std = ["alloc", "chrono/std", "chrono/clock", "thiserror/std"]
serde = ["dep:serde", "chrono?/serde"]
alloc = ["chrono?/alloc", "defmt?/alloc", "serde?/alloc"]
timelib = ["dep:time"]

[dev-dependencies]
postcard = { version = "1", features = ["alloc"] }
chrono = "0.4"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]
